--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "andrewh1001.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "bio-photo.jpg"
   name             : "Ching-Hsiang (Andrew) Huang"
   pronouns         : # example: "she  /her"  
   bio              : "Computer Engineering"
