--- a/_data/places.yml
+++ b/_data/places.yml
@@ -11,4 +11,11 @@
   review: "Run of the mill conveyor belt sushi. They got an interesting gimmick where you have a chance of getting a prize for every 5 plates. Got pretty lucky and won a cool little prize."
   rating: 4
   picture: "/images/kura_prize.jpg"
+
+- coord: "25.049569188918785, 121.51765222642979"
+  name: "Mo-Mo-Paradise 台北京站牧場"
+  date: "2025/01/09"
+  review: "An all-you-can-eat sukiyaki restaurant. Only 5 choices of meat but multiple options for vegetables. Decent meal for the price. Would revist once in a while"
+  rating: 4
+  picture: ""
   
