--- a/_data/places.yml
+++ b/_data/places.yml
@@ -15,7 +15,7 @@
 - coord: "25.049569188918785, 121.51765222642979"
   name: "Mo-Mo-Paradise 台北京站牧場"
   date: "2025/01/09"
-  review: "An all-you-can-eat sukiyaki restaurant. Only 5 choices of meat but multiple options for vegetables. Decent meal for the price. Would revist once in a while"
+  review: "An all-you-can-eat sukiyaki restaurant. Only 5 choices of meat but multiple options for vegetables. Decent meal for the price. Would revisit once in a while"
   rating: 4
   picture: ""
   
