--- a/_data/places.yml
+++ b/_data/places.yml
@@ -18,4 +18,11 @@
   review: "An all-you-can-eat sukiyaki restaurant. Only 5 choices of meat but multiple options for vegetables. Decent meal for the price. Would revisit once in a while"
   rating: 4
   picture: ""
+
+- coord: "22.299255155062184, 114.17579024876609"
+  name: "陳師傅自製點心專門店"
+  date: "2025/01/10"
+  review: "Mediocre food"
+  rating: 3
+  picture: ""
   
