--- a/_data/places.yml
+++ b/_data/places.yml
@@ -22,7 +22,7 @@
 - coord: "22.299255155062184, 114.17579024876609"
   name: "陳師傅自製點心專門店"
   date: "2025/01/10"
-  review: "Mediocre food"
+  review: "Mediocre dim sum. Some of the dishes such as the pork bun leaves much to be desired."
   rating: 3
   picture: ""
   
