--- a/_data/places.yml
+++ b/_data/places.yml
@@ -61,5 +61,17 @@
   rating: 3
   picture: ""
 
+- coord: "24.971741603738856, 121.5458827058055"
+  name: "恬恬小吃店 Phở Việt"
+  date: "2025/01/19"
+  review: "乾炸春捲河粉"
+  rating: 4
+  picture: ""
 
+- coord: "24.977075106719273, 121.51752232006957"
+  name: "豆腐村 Tofu Village - 京站小碧潭店"
+  date: "2025/01/20"
+  review: "豬肉豆腐煲"
+  rating: 4
+  picture: ""
   
