--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,11 @@ author:
   avatar           : "bio-photo.jpg"
   name             : "Ching-Hsiang (Andrew) Huang"
   pronouns         : # example: "she  /her"  
-  bio              : "Computer Engineering"
+  bio              : "Electrical & Computer Engineering"
   location         : "US"
-  employer         : "Purdue University"
+  employer         : "Purdue University / University of Michigan"
   uri              : # URL
-  email            : "andrew@huang-ch.com" 
+  email            : "huangchs@umich.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
